管理员账号相关的功能测试完成